# RogEng_backup

./: .gitignore  CMakeLists.txt  Readme.md  RogEng.vcxproj  RogEng.vcxproj.filters
Debug/: RogEng.idb  RogEng.vcxproj.FileListAbsolute.txt
Debug/RogEng.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  RogEng.lastbuildstate
Engine/: CMakeLists.txt  LICENSE
Engine/Source/: RogEng.h
Engine/Source/RogEng/: Event.c  EventLoop.c  Input.c  Main.c
Engine/Source/RogEng/Impl/GLFW/: GLFW.c
Engine/Source/RogEng/Impl/Linux/: Thread.c
Engine/Source/RogEng/Impl/Windows/: DynArray.c  PopUp.c
Sandbox/: CMakeLists.txt
Sandbox/Source/: Sandbox.c
Source/: RogEng.h
Source/RogEng/: CreateEngine.c  Event.c  EventLoop.c  Input.c  NewFrame.c  SetGetEngine.c
Source/RogEng/Impl/GLFW/: GLFW.c
Source/RogEng/Impl/Windows/: DynArray.c  Thread.c
x64/Debug/: RogEng.idb  RogEng.vcxproj.FileListAbsolute.txt
x64/Debug/RogEng.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  RogEng.lastbuildstate
x64/Release/RogEng.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  RogEng.lastbuildstate
